--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,8 @@ layout: default
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
       {%- endif -%}</p>
+
+      {{page.website}}
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
