--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,8 @@ layout: default
     <div class="row">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
-      <div class="col-6">
+      <div class="col-xs-12 col-sm-6">
+        <img src="assets/images/{{post.image}}"/>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
