--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,5 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize",
-  "bootstrap/bootstrap";
+  "bootstrap/bootstrap",
+  "base/base";
