--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="container-fluid">
         {{ content }}
       </div>
     </main>
