--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,12 @@ layout: default
       {%- endif -%}</p>
 
       <div class="row">
-        <div class="col-12">
-          <img src="/assets/images/{{page.image}}"/>
+        <div class="col-xs-12">
+          <div class="c-hero__tile mb-4">
+            <div class="c-hero__tile__image">
+              <img src="/assets/images/{{page.image}}"/>
+            </div>
+          </div>
         </div>
       </div>
 
