--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,17 +6,6 @@ layout: default
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.modified_date -%}
-        ~ 
-        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
-        </time>
-      {%- endif -%}
       {%- if page.author -%}
         • {% for author in page.author %}
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
@@ -26,7 +15,7 @@ layout: default
       {%- endif -%}</p>
 
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col">
           <div class="c-hero__tile mb-4">
             <div class="c-hero__tile__image">
               <img src="/assets/images/{{page.image}}"/>
