add print style

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -80,3 +80,19 @@ a {
     object-position: 50% 50%;
   }
 }
+
+@media print {
+  body {
+    background-color: white;
+    color: black;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    color: black;
+  }
+  a {
+    color: black;
+    &:hover, &:visited, &:active, &:link {
+      color: black;
+    }
+  }
+}
