--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <h2 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h2>
     <p class="post-meta">
       {%- if page.author -%}
         • {% for author in page.author %}
@@ -16,7 +16,7 @@ layout: default
 
       <div class="row">
         <div class="col">
-          <div class="c-hero__tile mb-4">
+          <div class="c-hero__tile c-shadow mb-4">
             <div class="c-hero__tile__image">
               <img src="/assets/images/{{page.image}}"/>
             </div>
