change title styles

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -22,9 +22,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: yellow;
+  font-family: $century-regular;
 }
 
 a {
+  font-family: 'Courier New', Courier, monospace;
   color: yellow;
   &:hover, &:visited, &:active, &:link {
     color: yellow;
@@ -95,4 +97,8 @@ a {
       color: black;
     }
   }
+}
+
+.post-title {
+  font-family: 'Courier New', Courier, monospace;
 }
