--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
                 {{ post.title | escape }}
               </h3>
               <div class="c-hero__tile__image c-hover">
-                <img src="assets/images/{{post.image}}" class=""/>
+                <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
               </div>
             </a>
           </div>
