--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
         <div class="col">
           <div class="c-hero__tile c-shadow mb-4">
             <div class="c-hero__tile__image">
-              <img src="/assets/images/{{page.image}}"/>
+              <img src="/assets/images/{{page.image}}" alt="{{post.title | escape}}"/>
             </div>
           </div>
         </div>
