--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,14 @@ layout: default
                 {{ post.title | escape }}
               </h3>
               <div class="c-hero__tile__image c-hover">
-                <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                {%- if post.video -%}
+                  <video autoplay loop>
+                    <source src="assets/videos/{{post.video}}" type="video/mp4">
+                    <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                  </video>
+                {%- else -%}
+                  <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                {%- endif -%}
               </div>
             </a>
           </div>
