--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -76,7 +76,7 @@ a {
   display: flex;
   width: 100%;
   transition: filter 0.250s;
-  img {
+  img, video {
     width: 100%;
     object-fit: cover;
     object-position: 50% 50%;
