--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h2 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h2>
+    <h2 class="post-title p-name" itemprop="name headline">{{ page.title }}</h2>
     <p class="post-meta">
       {%- if page.author -%}
         • {% for author in page.author %}
