--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -23,6 +23,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: yellow;
   font-family: $century-regular;
+  a {
+    font-family: $century-regular;
+  }
 }
 
 a {
