--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
               <div class="c-hero__tile__image c-hover">
                 {%- if post.video -%}
                   <video autoplay loop>
-                    <source src="assets/videos/{{post.video}}" type="video/mp4">
+                    <source src="assets/videos/{{post.video}}" poster="assets/images/{{post.image}}" type="video/mp4">
                     <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
                   </video>
                 {%- else -%}
