--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -52,8 +52,18 @@ a {
   overflow: hidden;
   height: 40vw;
   max-height: 490px;
+  transition: max-height 0.15s ease-out;
+  cursor: pointer;
   @media (max-width: 600px) {
     height: 80vw;
+  }
+}
+
+.c-hero__tile--expand {
+  cursor: zoom-out;
+  @media (min-width: 600px) {
+    height: 100%;
+    max-height: 100%;
   }
 }
 
@@ -82,7 +92,7 @@ a {
   img, video {
     width: 100%;
     object-fit: cover;
-    object-position: 50% 50%;
+    object-position: 0 0;
   }
 }
 
