--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,13 @@
 layout: default
 ---
 
+<div class="tower">
+  <img src="assets/images/tower_lineart_yellow.png"/>
+</div>
+
 <div class="row">
   <div class="col">
     {{ content }}
-
 
     {% if site.paginate %}
       {% assign posts = paginator.posts %}
