add tower to post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<div class="tower tower--post">
+  <img src="/assets/images/tower_lineart_yellow.png"/>
+</div>
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
