--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -18,6 +18,7 @@ body {
   font-family: $century-regular;
   background-color: blue;
   color: white;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -150,5 +151,13 @@ a {
   }
   @media (max-width: 1024px) {
     display: none;
+  }
+}
+
+.tower--post {
+  height: 80px;
+  width: 80px;
+  img {
+    padding: 0;
   }
 }
