add tower to page layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="tower tower--post">
+<a href="/" class="tower tower--post">
   <img src="/assets/images/tower_lineart_yellow.png"/>
-</div>
+</a>
 
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
