--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -71,7 +71,7 @@ a {
 .c-hero__tile__label {
   position: absolute;
   bottom: 0;
-  background: black;
+  background: blue;
   color: yellow;
   max-width: 50%;
   font-family: 'Courier New', Courier, monospace;
