--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+p {
+  max-width: 80ch;
+}
+
 a {
   font-family: 'Courier New', Courier, monospace;
   color: yellow;
