--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,13 +29,13 @@ layout: default
               <div class="c-hero__tile__image c-hero__tile__image--main c-hover">
                 {%- if post.video -%}
                   <video autoplay loop>
-                    <source src="assets/videos/{{post.video}}" poster="assets/images/{{post.image}}" type="video/mp4">
-                    <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                    <source src="assets/videos/{{post.video}}" poster="{{post.image}}" type="video/mp4">
+                    <img src="{{post.image}}" alt="{{post.title | escape}}"/>
                   </video>
                 {%- else -%}
-                  <img src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                  <img src="{{post.image}}" alt="{{post.title | escape}}"/>
                 {%- endif -%}
-                <img class="c-hero__tile__image__mobile" src="assets/images/{{post.image}}" alt="{{post.title | escape}}"/>
+                <img class="c-hero__tile__image__mobile" src="{{post.image}}" alt="{{post.title | escape}}"/>
               </div>
             </a>
           </div>
