--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,10 +26,10 @@ layout: default
               {%- if page.video -%}
                 <video autoplay loop>
                   <source src="/assets/videos/{{page.video}}" poster="assets/images/{{post.image}}" type="video/mp4">
-                  <img src="/assets/images/{{page.image}}" alt="{{post.title | escape}}"/>
+                  <img src="{{page.image}}" alt="{{post.title | escape}}"/>
                 </video>
               {%- else -%}
-                <img src="/assets/images/{{page.image}}" alt="{{post.title | escape}}"/>
+                <img src="{{page.image}}" alt="{{post.title | escape}}"/>
               {%- endif -%}
             </div>
           </div>
