--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -4,7 +4,7 @@
 }
 
 $century-regular: "CenturyRegular", serif;
-$hover-brightness: brightness(66%);
+$hover-brightness: brightness(44%);
 
 @mixin image-hover-brightness {
   transition: filter 0.250s;
@@ -41,8 +41,8 @@ a {
   }
 }
 
-.c-hover {
-  @include image-hover-brightness;
+.c-hero__tile__image {
+  transition: filter 0.250s;
 }
 
 .c-shadow {
@@ -87,6 +87,40 @@ a {
     .c-info-strip__read-bio {
       opacity: 1;
     }
+  }
+}
+
+.c-hero__tile--hover {
+  &:hover {
+    .c-hero__tile__image {
+      filter: $hover-brightness;
+      -webkit-filter: $hover-brightness;
+    }
+    .c-hero__tile__description {
+      opacity: 1;
+    }
+  }
+}
+
+.c-hero__tile__description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  color: white;
+  padding: 10px;
+  max-width: 60ch;
+  opacity: 0;
+  z-index: 9;
+  transition: opacity 0.250s;
+  @media (max-width: 600px) {
+    display: none;
   }
 }
 
