--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     <main class="page-content" aria-label="Content">
-      <div class="container-fluid">
+      <div class="container">
         {%- include header.html -%}
 
         {{ content }}
