--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<div class="tower">
+  <img src="assets/images/tower_black.png"/>
+</div>
+
 <div class="row">
   <div class="col">
     {{ content }}
