make links blue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,11 @@
 <header class="site-header">
   <div class="row">
     <div class="col">
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-        <h1>Emil Osmanbegovic</h1>
-      </a>
+      <h1>
+        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+          Emil Osmanbegovic
+        </a>
+      </h1>
     </div>
   </div>
 </header>
