--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -14,8 +14,8 @@ $futura: "Futura", sans-serif;
 $hover-brightness: brightness(44%);
 
 $highlight: #363636;
-$background: #f9d9b0;
-$black: #332836;
+$background: #edede2;//#f9d9b0;
+$black: #2e3238;//#332836;
 
 @mixin image-hover-brightness {
   transition: filter 0.250s;
@@ -80,7 +80,11 @@ ul, ol {
 }
 
 img {
-  //filter: grayscale(100);
+  filter: grayscale(100);
+}
+
+code {
+  color: $black;
 }
 
 .c-hero__tile__image {
