change highlight color

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -13,7 +13,7 @@ $futura: "Futura", sans-serif;
 
 $hover-brightness: brightness(44%);
 
-$highlight: #363636;
+$highlight: blue;
 $background: #edede2;//#f9d9b0;
 $black: #2e3238;//#332836;
 
