--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -32,6 +32,9 @@ body {
   padding-top: 8px;
   padding-bottom: 36px;
   font-size: 18px;
+  @media (max-width: 600px) {
+    font-size: 16px;
+  }
 }
 
 .container, .container-fluid {
