--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
   <body>
     <main class="page-content" aria-label="Content">
+      <div id="gradient" class="gradient"></div>
       <div class="container">
         {%- include header.html -%}
 
