fix broken image path

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,11 +22,11 @@ layout: default
           <div class="c-hero__tile__image">
             {%- if page.video -%}
               <video autoplay loop>
-                <source src="/assets/videos/{{page.video}}" poster="assets/images/{{post.image}}" type="video/mp4">
-                <img src="{{page.image}}" alt="{{post.title | escape}}"/>
+                <source src="/assets/videos/{{page.video}}" poster="assets/images/{{page.image}}" type="video/mp4">
+                <img src="/{{page.image}}" alt="{{post.title | escape}}"/>
               </video>
             {%- else -%}
-              <img src="{{page.image}}" alt="{{post.title | escape}}"/>
+              <img src="/{{page.image}}" alt="{{post.title | escape}}"/>
             {%- endif -%}
           </div>
         </div>
