--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
                 <img src="/{{page.image}}" alt="{{post.title | escape}}"/>
               </video>
             {%- else -%}
-              <img src="/{{page.image}}" alt="{{post.title | escape}}"/>
+              <img src="{{page.image}}" alt="{{post.title | escape}}"/>
             {%- endif -%}
           </div>
         </div>
