--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -14,7 +14,7 @@ $futura: "Futura", sans-serif;
 $hover-brightness: brightness(44%);
 
 $highlight: blue;
-$background: #edede2;
+$background: #3c8def;
 $black: #000;
 
 
