--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-
 <div class="row">
   <div class="col">
     <div class="post-content">
@@ -10,54 +9,66 @@ layout: default
         <img src="assets/images/tower_black.png"/>
       </div>
       {{ content }}
-    </div>
 
-    <h1>Personal projects</h1>
+      <h2>Personal projects</h2>
 
-    {% if site.paginate %}
-      {% assign posts = paginator.posts %}
-    {% else %}
-      {% assign posts = site.posts %}
-    {% endif %}
-
-    {%- if posts.size > 0 -%}
-      <div class="row">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {%- for post in posts -%}
-
-          <div class="col-sm-6 col-xs-12">
-            <a href="{{ post.url | relative_url }}" class="c-hero__tile c-hero__tile--hover c-shadow mb-4">
-              <h3 class="c-hero__tile__label p-2 m-4">
-                {{ post.title | escape }}
-              </h3>
-              <div class="c-hero__tile__description">{{post.description}}</div>
-              <div class="c-hero__tile__image c-hero__tile__image--main">
-                <img src="{{post.image}}" alt="{{post.title | escape}}"/>
-              </div>
-            </a>
-          </div>
-
-        {%- endfor -%}
-      </div>
-
+      <p>
+        Below are some experimental projects that I am working on.
+        <br>
+        I split my time between art and code projects, looking for the overlap between.
+        <br>
+        The source-code can be found on my 
+        <a href="https://github.com/emilosman">
+          GitHub profile.
+        </a>
+      </p>
+      
       {% if site.paginate %}
-        <div class="pager">
-          <ul class="pagination">
-          {%- if paginator.previous_page %}
-            <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-          {%- else %}
-            <li><div class="pager-edge">•</div></li>
-          {%- endif %}
-            <li><div class="current-page">{{ paginator.page }}</div></li>
-          {%- if paginator.next_page %}
-            <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-          {%- else %}
-            <li><div class="pager-edge">•</div></li>
-          {%- endif %}
-          </ul>
+        {% assign posts = paginator.posts %}
+      {% else %}
+        {% assign posts = site.posts %}
+      {% endif %}
+      
+      {%- if posts.size > 0 -%}
+        <div class="row">
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          {%- for post in posts -%}
+      
+            <div class="col-sm-6 col-xs-12">
+              <a href="{{ post.url | relative_url }}" class="c-hero__tile c-hero__tile--hover c-shadow mb-4">
+                <h3 class="c-hero__tile__label p-2 m-4">
+                  {{ post.title | escape }}
+                </h3>
+                <div class="c-hero__tile__description">{{post.description}}</div>
+                <div class="c-hero__tile__image c-hero__tile__image--main">
+                  <img src="{{post.image}}" alt="{{post.title | escape}}"/>
+                </div>
+              </a>
+            </div>
+      
+          {%- endfor -%}
         </div>
-      {%- endif %}
+      
+        {% if site.paginate %}
+          <div class="pager">
+            <ul class="pagination">
+            {%- if paginator.previous_page %}
+              <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
+            {%- else %}
+              <li><div class="pager-edge">•</div></li>
+            {%- endif %}
+              <li><div class="current-page">{{ paginator.page }}</div></li>
+            {%- if paginator.next_page %}
+              <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
+            {%- else %}
+              <li><div class="pager-edge">•</div></li>
+            {%- endif %}
+            </ul>
+          </div>
+        {%- endif %}
+      
+      {%- endif -%}
 
-    {%- endif -%}
+    </div>
   </div>
 </div>
