--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -29,7 +29,7 @@ $black: #000;
 body {
   font-family: $century-regular;
   background-color: $background;
-  background-image: url('/assets/images/bg/an088a.jpg');
+  //background-image: url('/assets/images/bg/an088a.jpg');
   background-size: 10%;
   color: $black;
   padding-top: 8px;
