--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -13,9 +13,9 @@ $futura: "Futura", sans-serif;
 
 $hover-brightness: brightness(44%);
 
-$highlight: blue;
-$background: #edede2;
-$black: #000;
+$highlight: #3d3c43;
+$background: #f7eee1;
+$black: #3d3c43;
 
 
 @mixin image-hover-brightness {
