add banner image

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -281,3 +281,10 @@ body {
     display: none;
   }
 }
+
+.banner-image {
+  mix-blend-mode: darken;
+  max-width: 500px;
+  width: 100%;
+  height: auto;
+}
