--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@ layout: default
   <div class="col">
     <div class="post-content">
       {{ content }}
+      <img class="banner-image" src="/assets/images/20201217_1_web_crop.jpg"/>
     </div>
   </div>
 </div>
