add link to graphics

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,10 @@ layout: default
   <div class="col">
     <div class="post-content">
       {{ content }}
-      <img class="banner-image" src="/assets/images/20201217_1_web_crop.jpg"/>
+
+      <a class="banner-image" href="https://emil.graphics">
+        <img src="/assets/images/20201217_1_web_crop.jpg"/>
+      </a>
     </div>
   </div>
 </div>
