--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -283,8 +283,11 @@ body {
 }
 
 .banner-image {
-  mix-blend-mode: darken;
-  max-width: 500px;
-  width: 100%;
-  height: auto;
+  background: none;
+  img {
+    mix-blend-mode: darken;
+    max-width: 500px;
+    width: 100%;
+    height: auto;
+  }
 }
