--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -241,11 +241,21 @@ body {
 }
 
 .banner-image {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   background: none;
   img {
     mix-blend-mode: darken;
-    max-width: 500px;
+    max-width: 300px;
     width: 100%;
     height: auto;
   }
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
 }
