--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,10 +8,10 @@ layout: default
   </div>
   <div class="col-sm-6 col-xs-12">
     <nav>
-      <a href="/cv" class="p-2 mb-3">CV</a>
-      <a href="https://www.github.com/emilosman" class="p-2 mb-3">GitHub</a>
-      <a href="mailto:emilosmanbegovic@gmail.com" class="p-2 mb-3">Email</a>
-      <a href="https://www.linkedin.com/in/emil-osmanbegovi%C4%87-357579123/" class="p-2 mb-3">LinkedIn</a>
+      <a href="/cv" class="p-2 mb-3 c-shadow">CV</a>
+      <a href="https://www.github.com/emilosman" class="p-2 mb-3 c-shadow">GitHub</a>
+      <a href="mailto:emilosmanbegovic@gmail.com" class="p-2 mb-3 c-shadow">Email</a>
+      <a href="https://www.linkedin.com/in/emil-osmanbegovi%C4%87-357579123/" class="p-2 mb-3 c-shadow">LinkedIn</a>
     </nav>
   </div>
   <div class="col-sm-6 col-xs-12">
