--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,17 @@ layout: default
     </nav>
   </div>
   <div class="col-sm-6 col-xs-12">
+    <p>
+      Working with Ruby on Rails & JavaScript.
+      <br>
+      I draw in my free time.
+      <br>
+      Read my CV for details about my professional work.
+      <br>
+      Below you can see some of my hobby projects.
+      <br>
+      Enjoy!
+    </p>
     <a class="banner-image" href="https://emil.graphics">
       <img src="/assets/images/20210119_3_web.jpg"/>
     </a>
