--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -43,6 +43,10 @@ body {
   background-color: $background;
 }
 
+img {
+  max-width: 100%;
+}
+
 h1 {
   font-family: $futura;
   font-weight: bold;
