--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,17 @@ layout: default
     <h2 class="mb-4">Web developer & visual artist from Serbia</h2>
   </div>
   <div class="col-sm-6 col-xs-12">
+    <p>
+      Working with Ruby on Rails & JavaScript.
+      <br>
+      I draw in my free time.
+      <br>
+      Read my <a href="/cv">CV</a> for details about my professional work.
+      <br>
+      Below you can see some of my hobby projects.
+      <br>
+      Enjoy!
+    </p>
     <nav>
       <a href="/cv" class="p-2 mb-3 c-shadow">CV</a>
       <a href="https://www.github.com/emilosman" class="p-2 mb-3 c-shadow">GitHub</a>
@@ -15,17 +26,6 @@ layout: default
     </nav>
   </div>
   <div class="col-sm-6 col-xs-12">
-    <p>
-      Working with Ruby on Rails & JavaScript.
-      <br>
-      I draw in my free time.
-      <br>
-      Read my CV for details about my professional work.
-      <br>
-      Below you can see some of my hobby projects.
-      <br>
-      Enjoy!
-    </p>
     <a class="banner-image" href="https://emil.graphics">
       <img src="/assets/images/20210609_1_web.jpg"/>
     </a>
