update og image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
   </div>
   <div class="col-sm-6 col-xs-12">
     <a class="banner-image" href="https://emil.graphics">
-      <img src="/assets/images/20210609_1_web.jpg"/>
+      <img src="/assets/images/avatar.jpg"/>
     </a>
   </div>
 </div>
