change link text center

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -127,7 +127,7 @@ code {
 .c-hero__tile__label {
   position: absolute;
   bottom: 0;
-  background: $highlight;
+  background: black;
   color: white;
   max-width: 50%;
   font-family: 'Courier New', Courier, monospace;
