--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,10 +19,10 @@ layout: default
       Enjoy!
     </p>
     <nav>
-      <a href="/cv" class="p-2 mb-3 c-shadow">CV</a>
-      <a href="https://www.github.com/emilosman" class="p-2 mb-3 c-shadow">GitHub</a>
-      <a href="mailto:hello@emilosman.com" class="p-2 mb-3 c-shadow">Email</a>
-      <a href="https://www.linkedin.com/in/emil-osmanbegovi%C4%87-357579123/" class="p-2 mb-3 c-shadow">LinkedIn</a>
+      <a href="/cv" class="text-center p-2 mb-3 c-shadow">CV</a>
+      <a href="https://www.github.com/emilosman" class="text-center p-2 mb-3 c-shadow">GitHub</a>
+      <a href="mailto:hello@emilosman.com" class="text-center p-2 mb-3 c-shadow">Email</a>
+      <a href="https://www.linkedin.com/in/emil-osmanbegovi%C4%87-357579123/" class="text-center p-2 mb-3 c-shadow">LinkedIn</a>
     </nav>
   </div>
   <div class="col-sm-6 col-xs-12">
