--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -184,10 +184,12 @@ code {
 }
 
 .c-hero__tile__image--main {
+  /*
   img {
-    //-webkit-filter: grayscale(100%);
-    //filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
   }
+  */
   @media (max-width: 600px) {
     video {
       display: none;
