--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
     </nav>
   </div>
   <div class="col-sm-6 col-xs-12">
-    <a class="banner-image" href="#">
+    <a class="banner-image" href="https://emil.graphics">
       <img src="/assets/images/avatar.jpg"/>
     </a>
   </div>
