--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,4 +52,7 @@ layout: default
       </a>
     </div>
   {%- endfor -%}
+  <div class="col-sm-6 col-xs-12">
+    <img class="have-a-nice-day" src="/assets/images/have-a-nice-day.jpg" alt="{have a nice day!"/>
+  </div>
 </div>
