--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    <h2 class="mb-4">Web developer & visual artist from Serbia</h2>
+    <h2 class="mb-4">Web developer from Serbia</h2>
   </div>
   <div class="col-sm-6 col-xs-12">
     <p>
