--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <main class="page-content" aria-label="Content">
       <div class="container">
         {%- include header.html -%}
+        {%- include nav.html -%}
 
         {{ content }}
       </div>
