change highlight color

--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -13,7 +13,7 @@ $futura: "Futura", sans-serif;
 
 $hover-brightness: brightness(44%);
 
-$highlight: #3d3c43;
+$highlight: #de2078;
 $background: #f7eee1;
 $black: #3d3c43;
 
