--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,3 +3,7 @@ layout: default
 ---
 {% capture include_markdown %}{% include_relative cv.md %}{% endcapture %}
 {{ include_markdown | markdownify }}
+
+<hr>
+
+{% include personal-projects.html %}
