--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -138,7 +138,7 @@ code {
 .c-hero__tile__label {
   position: absolute;
   bottom: 0;
-  background: black;
+  background: $highlight;
   color: white;
   max-width: 50%;
   font-family: 'Courier New', Courier, monospace;
