--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
 <nav>
+  <a href="/cv">CV</a>
   <a href="https://www.github.com/emilosman">GitHub</a>
   <a href="https://www.linkedin.com/in/emil-osmanbegovi%C4%87-357579123/">LinkedIn</a>
   <a href="mailto:hello@emilosman.com">Email</a>
