--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -41,7 +41,7 @@ body {
 .container, .container-fluid {
   position: relative;
   background-color: $background;
-  padding: 10px 50px 10px 10px;
+  padding: 10px;
 }
 
 nav {
