--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -41,7 +41,7 @@ body {
 .container, .container-fluid {
   position: relative;
   background-color: $background;
-  padding: 10px;
+  padding: 10px 50px 10px 10px;
 }
 
 nav {
@@ -49,8 +49,14 @@ nav {
   top: 100px;
   right: 10px;
   writing-mode: vertical-lr;
+  font-size: 1.2rem;
+  a {
+    margin-bottom: 4px;
+    padding: 4px;
+  }
   @media (max-width: 600px) {
     top: 140px;
+    font-size: inherit;
   }
 }
 
