--- a/_sass/base/base.scss
+++ b/_sass/base/base.scss
@@ -15,7 +15,7 @@ $hover-brightness: brightness(44%);
 
 $highlight: #de2078;
 $background: #f7eee1;
-$black: #3d3c43;
+$black: #000;
 
 
 @mixin image-hover-brightness {
